--- a/top.html
+++ b/top.html
@@ -8,10 +8,11 @@
   <title>神経衰弱</title>
 </head>
 <body>
-  <div id ="field">
+  <div id = "clock"></div>
+  <div id = "field">
     <!--カードはjsで作成-->
   </div>
   
-  <script src="script.js"></script>
+  <script src = "script.js"></script>
 </body>
 </html>
