--- a/top.html
+++ b/top.html
@@ -5,14 +5,18 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
-  <title>神経衰弱</title>
+  <title>おさかな神経衰弱</title>
 </head>
 <body>
-  <div id = "clock"></div>
-  <div id = "field">
-    <!--カードはjsで作成-->
+  <div id="container">
+    <div id = "clock"></div>
+    <div id = "field">
+      <!--カードはjsで作成-->
+    </div>
   </div>
-  
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
+  <script src="jquery.ripples-min.js"></script>
   <script src = "script.js"></script>
 </body>
 </html>
