[add]クリア後スコア表示化

--- a/top.html
+++ b/top.html
@@ -10,9 +10,11 @@
 <body>
   <div id="container">
     <div id = "clock"></div>
+    
     <div id = "field">
       <!--カードはjsで作成-->
     </div>
+    <div id = "clear"></div>
   </div>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
