--- a/top.html
+++ b/top.html
@@ -1,32 +1,51 @@
 <!DOCTYPE html>
 <html lang="ja">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!--googleフォント-->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c&display=swap" rel="stylesheet">
+  <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--googleフォント-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c&display=swap" rel="stylesheet">
 
-  <link rel="stylesheet" href="top.css">
-  <title>ポートフォリオ一覧</title>
-</head>
+    <link rel="stylesheet" href="stylesheet/top.css">
+    <title>ポートフォリオ一覧</title>
+  </head>
 
-<body>
-    <div class = "title">ポートフォリオ一覧</div>
-      <div class = "site_image">
-        <p class = "shibuns">ShibuNS</p>
-        <a href="http://43.206.131.28/"> <img src="ShibuNS.jpg" alt="ShibuNS" width="70%" height="auto"></a>
-        <p>DMM WEBCAMP受講中にポートフォリオとして制作したSNSサイトです。</p>
-        <a href= "https://github.com/InoKotaro/PF-a" target="_blank" rel="noopener noreferrer">GitHub</a>
+  <body>
+      <div class = "title">ポートフォリオ一覧</div>
+        <div class = "site_image">
+          <p class = "site_title">ShibuNS</p>
+          <div class = "image">
+            <a href="http://43.206.131.28/" target="_blank" rel="noopener noreferrer">
+              <img src="img/ShibuNS.jpg" alt="ShibuNS">
+            </a>
+          </div>
+          <p>DMM WEBCAMP受講中にポートフォリオとして制作したSNSサイトです。</p>
+          <p>直感的に使えるようUIを意識して作りました。</p>
+          <a href= "https://github.com/InoKotaro/PF-a" target="_blank" rel="noopener noreferrer">
+            <button class="button">GitHub</button>
+          </a>
+        </div>
+        <div class = "site_image">
+          <p class = "site_title">おさかな神経衰弱</p>
+          <div class = "image">
+            <img src="img/osakana.jpg" alt="OSAKANA Concentration">
+          </div>
+          <p>JavaScriptに関して理解を深める目的で制作したブラウザゲームです。</p>
+          <p>海というコンセプトに沿ったエフェクトを採用しました。</p>
+          <a href= "https://github.com/InoKotaro/Concentration" target="_blank" rel="noopener noreferrer">
+            <button class="button">GitHub
+            </button>
+          </a>
+        </div>
+        
       </div>
-      <div class = "site_image">
-        <img src="osakana.jpg" width="70%" height="auto">
-      </div>
-      
-    </div>
 
-  <!--CDN関係-->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
-  <script src = "top.js"></script>
+    <!--CDN関係-->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
+    <script src = "js/top.js"></script>
+  </body>
+
+</html>
